# Elle-Ann-ESI-Final

./: .gitignore  README.md
.emergent/: emergent.yml
ElleAnn/: Directory.Build.props  ElleAnn.sln  README.md  elle_master_config.json
ElleAnn/Debug/: DebugTools.cpp  test_compile_audit_feb2026.cpp  test_config_dump_redacted.cpp  test_config_surrogate.cpp  test_identity_persistence.cpp  test_json_extract.cpp  test_jwt_and_emotion_map.cpp  test_lua_scalar_reader.cpp  test_passive_mesh.cpp
ElleAnn/Deploy/: gen_serverinfo_files.py
ElleAnn/Docs/: ANDROID_INTEGRATION.md  ANDROID_PROFILE_FIX_OVERLAY_VERIFICATION.md  ANTI_SLOP_AUDIT_TRACKING.md  BUILD_NOTES.md  BUILD_VS.md  CHAT_PIPELINE.md  COGNITIVE_DECEPTION_BRIDGE.md  COMPOSER_SERVICE_SPEC.md  CONFIG_SCHEMA_DRIFT_REPORT.md  DB_CONSUMPTION_FIX.md  DECEPTION_EXTENSIONS.md  HTTP_GOD_FILE_MSVC_VERIFICATION.md  HTTP_GOD_FILE_SPLIT_PLAN.md  INTUITION_SERVICE.md  LEXICAL_COMPLETENESS.md  LLM_AUDIT.md  PASS_15_HOST_VERIFICATION_RUNBOOK.md  PROBABILITY_SERVICE.md  REPO_LAYOUT.md  SERVICE_DECEPTION.md  SLOPPY_WORK_FIX.md  SQL_FALLBACK_CONSOLE.md
ElleAnn/Engines/elle-language/: .gitignore  CMakeLists.txt
ElleAnn/Engines/elle-language/apps/: heartbeat_demo.cpp  smoke_test.cpp
ElleAnn/Engines/elle-language/include/elle/: Cache.hpp  Config.hpp  ContextComparator.hpp  DebugTrace.hpp  EmotionalWeightProcessor.hpp  Engine.hpp  InputNormalizer.hpp  IntegerSequenceBuilder.hpp  MeaningObjectBuilder.hpp  OdbcConnection.hpp  PhraseScanner.hpp  SemanticGraphWalker.hpp  SenseCandidateResolver.hpp  SqlAccessLayer.hpp  SqlServerAccessLayer.hpp  StringUtil.hpp  Types.hpp  WordFormResolver.hpp
ElleAnn/Engines/elle-language/sql/: 01_schema.sql  02_seed_lexicon.sql  03_seed_phrases.sql  04_seed_senses.sql  05_seed_relations.sql  06_seed_context_frames.sql  07_seed_concepts.sql  08_indexes.sql  09_validation_and_loaders.sql
ElleAnn/Engines/elle-language/src/: Config.cpp  ContextComparator.cpp  DebugTrace.cpp  EmotionalWeightProcessor.cpp  Engine.cpp  InMemoryAccessLayer.cpp  InputNormalizer.cpp  IntegerSequenceBuilder.cpp  MeaningObjectBuilder.cpp  OdbcConnection.cpp  PhraseScanner.cpp  SemanticGraphWalker.cpp  SenseCandidateResolver.cpp  SqlServerAccessLayer.cpp  StringUtil.cpp  WordFormResolver.cpp
ElleAnn/Engines/elle-language/tests/: test_context_scoring.cpp  test_debug_trace.cpp  test_emotional_context.cpp  test_homonym.cpp  test_homophone.cpp  test_input_normalizer.cpp  test_main.cpp  test_paraphrase.cpp  test_phrase_first.cpp  test_phrase_resolution.cpp  test_semantic_graph.cpp  test_synonym_antonym.cpp  test_unknown_word.cpp
ElleAnn/Engines/elle-probability/: CMakeLists.txt  INTEGRATION.md  README.md
ElleAnn/Engines/elle-probability/apps/: bridge_smoke_demo.cpp  prob_heartbeat_demo.cpp
ElleAnn/Engines/elle-probability/include/elle/prob/: AuditTrace.hpp  BayesianUpdater.hpp  BeliefStore.hpp  Bridge.hpp  EmotionalPosteriorBuilder.hpp  IntentAnalyzer.hpp  ProbabilityEngine.hpp  SenseProbabilityResolver.hpp  SpeakerTrustModel.hpp  Types.hpp
ElleAnn/Engines/elle-probability/src/: AuditTrace.cpp  BayesianUpdater.cpp  BeliefStore.cpp  Bridge.cpp  EmotionalPosteriorBuilder.cpp  IntentAnalyzer.cpp  ProbabilityEngine.cpp  SenseProbabilityResolver.cpp  SpeakerTrustModel.cpp  Types.cpp
ElleAnn/Engines/elle-probability/tests/: test_bayesian_updater.cpp  test_bridge.cpp  test_distribution.cpp  test_emotional_posterior.cpp  test_engine_integration.cpp  test_main.cpp
ElleAnn/Linux/: README.md  run_all_ctests.sh  setup_dev_env.sh
ElleAnn/SQL/: ElleAnn_Identity_Schema.sql  ElleAnn_Schema.sql  ElleAnn_System_Schema.sql  gen_dictionary_seed.py
ElleAnn/Services/Elle.Service.Composer/: CMakeLists.txt  Composer.cpp  ComposerEngine.cpp  ComposerEngine.h  Elle.Service.Composer.vcxproj  FrameLibrary.cpp  FrameLibrary.h  InflectionTables.cpp  InflectionTables.h  SlotPlanner.cpp  SlotPlanner.h
ElleAnn/Services/Elle.Service.Composer/core/: SlotSpecParser.h
ElleAnn/Services/Elle.Service.Composer/tests/: test_chain_integration.cpp  test_parse_slots.cpp  test_score_frame.cpp
ElleAnn/Services/Elle.Service.Intuition/: CMakeLists.txt  Elle.Service.Intuition.vcxproj  Intuition.cpp  README.md
ElleAnn/Services/Elle.Service.Intuition/core/: IntuitionEngine.h
ElleAnn/Services/Elle.Service.Intuition/tests/: test_combined_signal.cpp  test_feedback.cpp  test_fire_instincts.cpp  test_patterns.cpp  test_synthesize.cpp
ElleAnn/Services/Elle.Service.Probability/: .gitignore  CMakeLists.txt  Elle.Service.Probability.vcxproj  INTEGRATION.md  README.md
ElleAnn/Services/Elle.Service.Probability/apps/: bridge_smoke_demo.cpp  prob_heartbeat_demo.cpp
ElleAnn/Services/Elle.Service.Probability/include/elle/prob/: AuditTrace.hpp  BayesianUpdater.hpp  BeliefPersistence.hpp  BeliefStore.hpp  Bridge.hpp  EmotionalPosteriorBuilder.hpp  IntentAnalyzer.hpp  JsonlBeliefPersistence.hpp  MultiplexBeliefPersistence.hpp  ProbabilityEngine.hpp  SenseProbabilityResolver.hpp  SpeakerTrustModel.hpp  Types.hpp
ElleAnn/Services/Elle.Service.Probability/service/: OdbcBeliefPersistence.hpp  ProbabilityHost.cpp  ProbabilityHost.h  ProbabilityProto.cpp  ProbabilityProto.h  ProbabilityService.cpp  host_smoke_test.cpp  proto_smoke_test.cpp
ElleAnn/Services/Elle.Service.Probability/src/: AuditTrace.cpp  BayesianUpdater.cpp  BeliefStore.cpp  Bridge.cpp  EmotionalPosteriorBuilder.cpp  IntentAnalyzer.cpp  ProbabilityEngine.cpp  SenseProbabilityResolver.cpp  SpeakerTrustModel.cpp  Types.cpp
ElleAnn/Services/Elle.Service.Probability/tests/: test_bayesian_updater.cpp  test_belief_persistence.cpp  test_belief_store_persistence.cpp  test_bridge.cpp  test_chain_integration_e2e.cpp  test_distribution.cpp  test_engine_integration.cpp  test_host_belief_wire.cpp  test_jsonl_belief_persistence.cpp  test_multiplex_belief_persistence.cpp
ElleAnn/Services/_Shared/tests/: CMakeLists.txt
ElleAnn/Services/_Shared/tests/tests/: test_intent_label_vocab.cpp  test_shn_version_store.cpp  test_sql_fallback_classifier.cpp  test_upload_guard.cpp
ElleAnn/Shared/: ElleLLM.cpp  (+24 more)
memory/: CHANGELOG.md  PRD.md
(+375 files in other folders)
